# prismshell

./: .gitignore  CMakeLists.txt  build.sh  caret-lexer.patch  caret-runtime.patch  demo.bas  gosub-fix.patch  parser-caret.patch  readme.md  test.bas
docs/: Architecture.md  Getting-Started.md  Installation.md  Language.md  Mods.md  Prompt.md  Roadmap.md  Troubleshooting.md
include/prismshell/: interpreter.hpp  lexer.hpp  parser.hpp  runtime.hpp  signals.hpp  utils.hpp
man/man1/: prismshell.1
man/man7/: prismshell-language.7  prismshell-mods.7  prismshell-prompt.7
mods/: dice.bas  prompt.bas  say.bas
scripts/: dev.sh  make-dist.sh
src/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp  utils.cpp
